k8s/ai-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-symptom-checker-deployment
  labels:
    app: ai-symptom-checker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-symptom-checker
  template:
    metadata:
      labels:
        app: ai-symptom-checker
    spec:
      containers:
        - name: ai-symptom-checker
          image: ai-symptom-checker-image:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5005
