k8s/telemedicine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemedicine-service-deployment
  labels:
    app: telemedicine-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telemedicine-service
  template:
    metadata:
      labels:
        app: telemedicine-service
    spec:
      containers:
        - name: telemedicine-service
          image: telemedicine-service-image:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5008
