k8s/ai-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-symptom-checker-service
spec:
  type: ClusterIP
  selector:
    app: ai-symptom-checker
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
