k8s/appointment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  type: ClusterIP
  selector:
    app: appointment-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
