k8s/doctor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doctor-service
spec:
  type: ClusterIP
  selector:
    app: doctor-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
