k8s/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 5007
      targetPort: 5007
