k8s/telemedicine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telemedicine-service
spec:
  type: ClusterIP
  selector:
    app: telemedicine-service
  ports:
    - protocol: TCP
      port: 5008
      targetPort: 5008
