k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-healthcare-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: smart-healthcare.local
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5001
          - path: /api/doctors
            pathType: Prefix
            backend:
              service:
                name: doctor-service
                port:
                  number: 5002
          - path: /api/patients
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 5002
          - path: /api/ai
            pathType: Prefix
            backend:
              service:
                name: ai-symptom-checker-service
                port:
                  number: 5005
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 5006
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 5007
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
